--- a/views/admin/create.handlebars
+++ b/views/admin/create.handlebars
@@ -30,7 +30,7 @@
 
     <div class="form-group">
       <label for="description">Description</label>
-      <textarea class="form-control" id="description" name="description" rows="3">{{restaurant.description}}"</textarea>
+      <textarea class="form-control" id="description" name="description" rows="3">{{restaurant.description}}</textarea>
     </div>
 
     <div class="form-group">
