add puttoggleAdmin feature on router

--- a/views/admin/restaurants.handlebars
+++ b/views/admin/restaurants.handlebars
@@ -1,6 +1,6 @@
 <h1>餐廳後台</h1>
 <div class="m-2">
-  <a href="/admin">Restaurant</a> <span>|</span> <a href="">Users</a>
+  <a href="/admin">Restaurant</a> <span>|</span> <a href="/admin/users">Users</a>
 </div>
 
 <a href='/admin/restaurants/create' class="mt-2">
