--- a/views/restaurants.handlebars
+++ b/views/restaurants.handlebars
@@ -1,2 +1,2 @@
 <h1>餐廳後台</h1>
-<a href="/admin">Restaurant</a> <span>|</span> <a href="">Users</a>
+<a href="/admin">Restaurant</a> <span>|</span> <a href="/admin/users">Users</a>
