add toggleAdmin feature

--- a/views/admin/users.handlebars
+++ b/views/admin/users.handlebars
@@ -22,8 +22,12 @@
       <th scope="row">{{this.id}}</th>
       <td>{{this.name}}</td>
       <td>{{this.email}}</td>
-      <td>{{#if isAdmiin}}admin{{/if}}user</td>
-      {{!-- <td></td> --}}
+      <td>{{#if isAdmin}}admin{{else}}user{{/if}} </td>
+      <form action="/admin/users/{{this.id}}/toggleAdmin?_method=PUT" method="POST">
+        <td>
+          <button class="btn link" type="submit">{{#if isAdmin}}set as user{{else}}set as admin{{/if}}</button>
+        </td>
+      </form>
     </tr>
     {{/each}}
   </tbody>
