--- a/views/admin/users.handlebars
+++ b/views/admin/users.handlebars
@@ -1,6 +1,7 @@
 <h1>餐廳後台</h1>
-<div class="m-2">
-  <a href="/admin">Restaurant</a> <span>|</span> <a href="/admin/users">Users</a>
+<div class="m-2"><a href="/admin/users">Users</a> |
+  <a href="/admin">Restaurant</a> |
+  <a href="/admin/categories">Categories</a>
 </div>
 
 <br />
