--- a/views/restaurants.handlebars
+++ b/views/restaurants.handlebars
@@ -1,2 +1,5 @@
 <h1>餐廳後台</h1>
-<a href="/admin">Restaurant</a> <span>|</span> <a href="/admin/users">Users</a>
+<div class="m-2"><a href="/admin/users">Users</a> |
+  <a href="/admin">Restaurant</a> |
+  <a href="/admin/categories">Categories</a>
+</div>
