add delete comment feature for admin

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
       </ul>
       <div>
         {{#if user.isAdmin}}
-        <a href="/" style="color: white;margin-right: 10px;">Admin 後台</a>
+        <a href="/admin" style="color: white;margin-right: 10px;">Admin 後台</a>
         {{/if}}
         {{#if user}}
         <span style="color: white;margin-right: 10px;">Hi, {{user.email}}</span>
