--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -24,6 +24,13 @@
 
 <h3>所有評論：</h3>
 {{#each restaurant.Comments}}
+{{!-- admin with delete feature --}}
+{{#if ../user.isAdmin}}
+<form action="/comments/{{this.id}}?_method=DELETE" method="POST" style="float: right;">
+  <button type="submit" class="btn btn-danger">Delete</button>
+</form>
+{{/if}}
+{{!-- admin with delete feature --}}
 <blockquote class="blockquote mb-0">
   <h4><a href="/users/{{this.User.id}}">{{this.User.name}}</a></h4>
   <p>{{this.text}}</p>
