add dashboard page,getdashBoard feature

--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -15,7 +15,12 @@
   </div>
   <div class="col-md-8">
     <p>{{ restaurant.description }}</p>
+    <div class="col-md-12">
+      <a href="/restaurants/{{restaurant.id}}/dashboard" class="btn btn-primary">Dashboard</a>
+
+    </div>
   </div>
+
   <hr>
 </div>
 
