--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
 
       <div class="col-md-12">
         <li>評論數：{{commentLength}}</li>
-        <li>瀏覽次數：</li>
+        <li>瀏覽次數：{{viewCounts}}</li>
         <li>收藏數：</li>
       </div>
     </div>
