--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -17,6 +17,7 @@
     <p>{{ restaurant.description }}</p>
     <div class="col-md-12">
       <a href="/restaurants/{{restaurant.id}}/dashboard" class="btn btn-primary">Dashboard</a>
+
       {{#if isFavorited }}
       <form action="/favorite/{{restaurant.id}}?_method=DELETE" method="POST" style="display: contents;"><button
           type="submit" class="btn btn-danger">移除最愛</button></form>
@@ -24,8 +25,18 @@
       <form action="/favorite/{{restaurant.id}}" method="POST" style="display: contents;"><button type="submit"
           class="btn btn-primary">加到最愛</button></form>
       {{/if}}
-    </div>
 
+      {{#if isLiked}}
+      <form action="/like/{{restaurant.id}}?_method=DELETE" method="POST" style="display: contents;"><button
+          type="submit" class="btn btn-danger">Like</button>
+      </form>
+      {{else}}
+      <form action="/like/{{restaurant.id}}" method="POST" style="display: contents;"><button type="submit"
+          class="btn btn-primary">Unlike</button>
+      </form>
+      {{/if}}
+
+    </div>
   </div>
 
   <hr>
