--- a/views/restaurants.handlebars
+++ b/views/restaurants.handlebars
@@ -34,33 +34,25 @@
         </p>
         <span class="badge badge-secondary">{{this.categoryName}}</span>
         <p class="card-text">{{this.description}}</p>
+
         {{#if this.isFavorited}}
         <form action="/favorite/{{this.id}}?_method=DELETE" method="POST" style="display: contents;"><button
             type="submit" class="btn btn-danger">移除最愛</button></form>
         {{else}}
         <form action="/favorite/{{this.id}}" method="POST" style="display: contents;"><button type="submit"
-            class="btn btn-primary">加到最愛</button></form>
+            class="btn btn-primary">加到最愛</button>
+        </form>
         {{/if}}
-<<<<<<< HEAD
 
         {{#if this.isLiked}}
         <form action="/like/{{this.id}}?_method=DELETE" method="POST"><button type="submit" class="btn btn-danger"
-<<<<<<< HEAD
             style="display: contents;">Like</button></form>
         {{else}}
         <form action="/like/{{this.id}}" method="POST" style="display: contents;"><button type="submit"
             class="btn btn-primary">Unlike</button>
-=======
-            style="display: contents;">Unlike</button></form>
-        {{else}}
-        <form action="/like/{{this.id}}" method="POST" style="display: contents;"><button type="submit"
-            class="btn btn-primary">Like</button>
->>>>>>> A21
         </form>
         {{/if}}
 
-=======
->>>>>>> parent of e84f0c3 (add like/unklike feature)
       </div>
     </div>
   </div>
