--- a/views/restaurants.handlebars
+++ b/views/restaurants.handlebars
@@ -46,10 +46,10 @@
 
         {{#if this.isLiked}}
         <form action="/like/{{this.id}}?_method=DELETE" method="POST"><button type="submit" class="btn btn-danger"
-            style="display: contents;">Like</button></form>
+            style="display: contents;">Unlike</button></form>
         {{else}}
         <form action="/like/{{this.id}}" method="POST" style="display: contents;"><button type="submit"
-            class="btn btn-primary">Unlike</button>
+            class="btn btn-primary">Like</button>
         </form>
         {{/if}}
 
