--- a/views/restaurants.handlebars
+++ b/views/restaurants.handlebars
@@ -45,8 +45,8 @@
         {{/if}}
 
         {{#if this.isLiked}}
-        <form action="/like/{{this.id}}?_method=DELETE" method="POST"><button type="submit" class="btn btn-danger"
-            style="display: contents;">Unlike</button></form>
+        <form action="/like/{{this.id}}?_method=DELETE" method="POST" style="display: contents;"><button type="submit"
+            class="btn btn-danger">Unlike</button></form>
         {{else}}
         <form action="/like/{{this.id}}" method="POST" style="display: contents;"><button type="submit"
             class="btn btn-primary">Like</button>
