--- a/views/feeds.handlebars
+++ b/views/feeds.handlebars
@@ -8,8 +8,13 @@
   <li class="nav-item">
     <a class="nav-link" href="/users/top">美食達人</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/restaurants/top">TOP10人氣餐廳</a>
+  </li>
 </ul>
+
 <br /><br />
+
 <h1>最新動態</h1>
 <hr />
 <div class="row">
